Add .idea directory to .gitignore and remove files

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.idea/
+
 # Created by https://www.toptal.com/developers/gitignore/api/clion,cpp,cmake
 # Edit at https://www.toptal.com/developers/gitignore?templates=clion,cpp,cmake
 
