--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,7 @@ add_executable(leetcode main.cpp
         medium/71-simplify-path.h
         easy/191-number-of-1-bits.h
         medium/151-reverse-words-in-a-string.h
-        data/BTree.h
+        data/BinaryTree.h
         easy/100-same-tree.h
 )
 
