Extract LinkedList to its own header file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(leetcode main.cpp
         medium/151-reverse-words-in-a-string.h
         data/BinaryTree.h
         easy/100-same-tree.h
+        data/LinkedList.h
 )
 
 if (WIN32)
