Add solution for 19. Remove Nth Node From End of List

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ add_executable(leetcode main.cpp
         easy/100-same-tree.h
         easy/191-number-of-1-bits.h
         medium/2-add-two-numbers.h
+        medium/19-remove-nth-node-from-end-of-list.h
         medium/71-simplify-path.h
         medium/151-reverse-words-in-a-string.h
         hard/1096-brace-expansion-ii.h
