--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,7 @@ add_executable(leetcode main.cpp
         easy/543-diameter-of-binary-tree.h
         easy/821-shortest-distance-to-a-character.h
         easy/1046-last-stone-weight.h
+        easy/2185-counting-words-with-a-given-prefix.h
         easy/2236-root-equals-sum-of-children.h
         easy/2347-best-poker-hand.h
         easy/2432-the-employee-that-worked-on-the-longest-task.h
