--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ add_executable(leetcode src/main.cpp
         src/easy/821-shortest-distance-to-a-character.h
         src/easy/1046-last-stone-weight.h
         src/easy/2068-check-whether-two-strings-are-almost-equivalent.h
+        src/easy/2169-count-operations-to-obtain-zero.h
         src/easy/2185-counting-words-with-a-given-prefix.h
         src/easy/2236-root-equals-sum-of-children.h
         src/easy/2347-best-poker-hand.h
