--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,7 @@ add_executable(leetcode src/main.cpp
         src/easy/2068-check-whether-two-strings-are-almost-equivalent.h
         src/easy/2169-count-operations-to-obtain-zero.h
         src/easy/2185-counting-words-with-a-given-prefix.h
+        src/easy/2224-minimum-number-of-operations-to-convert-time.h
         src/easy/2236-root-equals-sum-of-children.h
         src/easy/2347-best-poker-hand.h
         src/easy/2432-the-employee-that-worked-on-the-longest-task.h
