Add solution for 2530. Maximal Score After Applying K Operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_executable(leetcode src/main.cpp
         src/medium/1963-minimum-number-of-swaps-to-make-the-string-balanced.h
         src/medium/2125-number-of-laser-beams-in-a-bank.h
         src/medium/2191-sort-the-jumbled-numbers.h
+        src/medium/2530-maximal-score-after-applying-k-operations.h
         src/hard/1096-brace-expansion-ii.h
         src/hard/2366-minimum-replacements-to-sort-the-array.h
 )
