Add solution for 2938. Separate Black and White Balls

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(leetcode src/main.cpp
         src/medium/2125-number-of-laser-beams-in-a-bank.h
         src/medium/2191-sort-the-jumbled-numbers.h
         src/medium/2530-maximal-score-after-applying-k-operations.h
+        src/medium/2938-separate-black-and-white-balls.h
         src/hard/1096-brace-expansion-ii.h
         src/hard/2366-minimum-replacements-to-sort-the-array.h
 )
