--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,7 @@ add_executable(leetcode src/main.cpp
         src/easy/2806-account-balance-after-rounded-purchase.h
         src/easy/2839-check-if-strings-can-be-made-equal-with-operations-i.h
         src/medium/2-add-two-numbers.h
+        src/medium/3-longest-substring-without-repeating-characters.h
         src/medium/7-reverse-integer.h
         src/medium/8-string-to-integer-atoi.h
         src/medium/19-remove-nth-node-from-end-of-list.h
