Add solution for 3096. Minimum Levels to Gain More Points

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ add_executable(leetcode src/main.cpp
         src/medium/2583-kth-largest-sum-in-a-binary-tree.h
         src/medium/2641-cousins-in-binary-tree-ii.h
         src/medium/2938-separate-black-and-white-balls.h
+        src/medium/3096-minimum-levels-to-gain-more-points.h
         src/hard/1096-brace-expansion-ii.h
         src/hard/1106-parsing-a-boolean-expression.h
         src/hard/2366-minimum-replacements-to-sort-the-array.h
